--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 
 .header{
 
-  background-color: liner-gradent(98deg, #4ca, #2e2e2e);background: #3f5df2;
+background-color: liner-gradent(98deg, #4ca, #2e2e2e);background: #3f5df2;
 background: radial-gradient(circle, rgba(63, 93, 242, 1) 59%, rgba(219, 74, 131, 1) 83%, rgba(252, 70, 107, 1) 100%);
 display: flex;   
+position:fixed;
+width: 100%;
 justify-content: center;
+height: 35px;
 padding: 15px 20px ;
 box-shadow: 0 4px 6px rgb(0, 0, 0, 0.5);
 }
@@ -26,4 +29,16 @@ position: relative;
 
 .header a:hover{
     color: #ecde61;
+}
+
+
+.footer{
+background-color: liner-gradent(98deg, #4ca, #2e2e2e);background: #3f5df2;
+background: radial-gradient(circle, rgba(63, 93, 242, 1) 59%, rgba(219, 74, 131, 1) 83%, rgba(252, 70, 107, 1) 100%);
+
+color: white;
+text-align: center;
+padding: 10px 0;
+
+
 }
